# PTF

./: .env.example  .flake8  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  schema.sql
.github/: dependabot.yml
auth_service/: Cargo.toml
auth_service/src/: crypto.rs  main.rs  utility.rs
file_service/: .env.example  Cargo.toml
file_service/src/: auth.rs  clients.rs  errors.rs  files.rs  main.rs  utility.rs
file_service/src/sql/: app.rs  dao_models.rs  mod.rs  traits.rs
message_service/: README.md  dev-requirements.txt  main.py  requirements.txt
message_service/src/: builder.py  dto_models.py  security.py  utilities.py
message_service/src/resources/: __init__.py
message_service/src/routes/: devices.py  messages.py
message_service/src/sql/: api.py  dao_models.py  dao_protos.py  impl.py
rest_service/: .env.example  .flake8  README.md  dev-requirements.txt  main.py  mypy.ini  requirements.txt
rest_service/src/: __init__.py  app.py  builder.py  dto_models.py  flags.py  refs.py  rest_server.py  security.py  utilities.py  validation.py
rest_service/src/resources/: __init__.py  devices.py  messages.py  users.py
rest_service/src/sql/: __init__.py  api.py  dao_models.py  dao_protos.py  impl.py
scripts/: .flake8  cert_gen.py  cert_gen_requirements.txt
shared/: Cargo.toml
shared/src/: clients.rs  dao_models.rs  dto_models.rs  lib.rs  postgres.rs  sql.rs
su_service/: .eslintrc.json  package-lock.json  package.json  tsconfig.json  webpack.config.js  wrangler.toml.example
su_service/src/: index.ts
