[package]
name = "auth_service"
version = "0.1.0"
authors = ["Faster Speeding <luke@lmbyrne.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
    actix-web   = "4.0.0-beta.4"
    # actix-web-httpauth = "0.5.1"  # TODO: when actix web 4.0.0 releases
    async-trait = "0.1.42"
    log         = "0.4.14"
    sodiumoxide = "0.2.6"  # Requires libsodium as a linked dependency
    validator   = "0.13.0"

[dependencies.shared]
    path        = "../shared"
    features    = ["postgres"]

[dependencies.tokio]
    version     = "1.4.0"
    features    = ["macros", "rt"]  # "io-util", "stream"

[dependencies.uuid]
    version     = "0.8.2"
    features    = ["serde"]
