[package]
name = "shared"
version = "0.1.0"
authors = ["Faster Speeding <luke@lmbyrne.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    async-trait     = "0.1.42"
    # bitflags        = "1.2.1"
    dotenv          = "0.15.0"
    lazy_static     = "1.4.0"
	log	            = "0.4.14"
    regex           = "1.4.5"
    simple_logger   = "1.11.0"
    time-parse      = "0.2.0"

[dependencies.chrono]
    version     = "0.4.2"
    features    = ["serde"]

[dependencies.serde]
    version     = "1.0.117"
    features    = ["derive"]

[dependencies.sqlx]
    version     = "0.5.1"
    features    = ["chrono", "runtime-tokio-native-tls", "uuid"]

[dependencies.uuid]
    version     = "0.8.2"
    features    = ["serde"]

[dependencies.validator]
    version     = "0.13.0"
    features    = ["derive"]

[features]
    postgres    = ["sqlx/postgres"]

