[package]
name = "shared"
version = "0.1.0"
authors = ["Faster Speeding <lucina@lmbyrne.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    async-trait     = "0.1.42"
    # bitflags        = "1.2.1"
    dotenv          = "0.15.0"
    lazy_static     = "1.4.0"
	log	            = "0.4.14"
    regex           = "1.4.5"
    serde_json      = "1.0.59"
    simple_logger   = "1.11.0"
    time-parse      = "0.2.0"
    urlencoding     = "1.1.1"

[dependencies.chrono]
    version     = "0.4.2"
    features    = ["serde"]

[dependencies.reqwest]
    optional    = true
    version     = "0.11.3"
    features    = ["json"]

[dependencies.serde]
    version     = "1.0.117"
    features    = ["derive"]

[dependencies.sqlx]
    version     = "0.5.1"
    features    = ["chrono", "runtime-tokio-native-tls", "uuid"]

[dependencies.uuid]
    version     = "0.8.2"
    features    = ["serde"]

[dependencies.validator]
    version     = "0.13.0"
    features    = ["derive"]

[features]
    clients     = ["reqwest"]
    postgres    = ["sqlx/postgres"]
